--- a/src/AndroidManifest.xml
+++ b/src/AndroidManifest.xml
@@ -2,5 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.frameworkres.overlay">
     <application android:hasCode="false" />
-    <overlay android:targetPackage="android" android:priority="1000"/>
+    <overlay android:targetPackage="android" android:isStatic="true" android:priority="1000" />
 </manifest>
