--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
+/*
+ * SPDX-FileCopyrightText: 2021, Greenflash1986 aka Samuel
+ * SPDX-License-Identifier: Apache-2.0
+ */
 rootProject.name = 'UnifiedNlpOverlay'
